# ditto

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  AUTHORS.md  CONTRIBUTING.md  Dockerfile  Makefile  Manifest.in  README.md  authors.html  cli-examples.html  contributing.html  fds  genindex.html  history.html  index.html  installation.html  make.bat  metrics.html  mkdocs.yml  modifications.html  notes.html  objects.inv  plugin.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.py  sitemap.xml  usage.html
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml
CYME/: Mapping_CYME.xlsx
DEW/: DEW_Ditto_Mapping.xlsx
GridLAB-D/: Mapping.xlsx
OpenDSS/: Mapping_OpenDSS.xlsx
_sources/: cli-examples.md.txt  modifications.md.txt  notes.md.txt  usage.md.txt
_sources/developer-guide/: docs.md.txt  index.md.txt
authors/: index.html
cli-examples/: index.html
contributing/: index.html
developer-guide/: docs.html  index.html  install.html  style.html
ditto/: __init__.py  cli.py  common.py  compat.py  constant.py  converter.py  core.py  ditto.py  dittolayers.py  environment.py  helpers.py  metric_computer.py  simulation_engines.py  store.py  utils.py  version.py
docs/: Makefile  authors.md  cli-examples.md  conf.py  contributing.md  ditto.environment.md  ditto.environment.rst  index.md  index.rst  installation.md  installation.rst  metrics.md  plugin.md  power_flow_minimum_requirements.md  read.md  readme.md  usage.md  usage.rst
ePHASORsim/: mapping_line.docx  mapping_load.docx
examples/: README.md  epri_j1_opendss_to_cyme.json  epri_j1_opendss_to_cyme.py  example_gridlabd_to_odo_via_opendss.py  ieee_123node_cyme_to_opendss.json  ieee_123node_cyme_to_opendss.py  ieee_123node_gridlabd_to_opendss.py  ieee_13node_opendss_input.json  ieee_8500_opendss_to_cyme.json  ieee_8500_opendss_to_cyme.py  readme.md  synergi_to_opendss.json
history/: index.html
installation/: index.html
metrics/: index.html
modifications/: index.html
notebooks/: Demo2+ OpenDSS to CYME with post-processing example.html  OpenDSS--DiTTo--OpenDSS Demo.html  Untitled.html  Untitled.ipynb  Untitled1.html
notes/: index.html
plugin/: index.html
power_flow_minimum_requirements/: index.html
readme/: index.html
scripts/: compare.py
search/: search_index.json
tests/: __init__.py  instructions_reader_tests  read_dss_13node.json  test_consistency.py  test_cyme_reader.py  test_cyme_to_ephasor.py  test_cyme_to_gridlabd.py  test_cyme_to_opendss.py  test_cyme_writer.py  test_demo_to_gridlabd.py  test_dew.py  test_ditto.py  test_ditto_cli.py  test_ephasor_writer.py  test_gridlab-d_reader.py  test_gridlabd_to_ephasor.py  test_json_parsers.py  test_metric_extraction.py  test_opendss_reader.py  test_opendss_to_cyme.py  test_opendss_to_ephasor.py  test_opendss_to_gridlabd.py  test_opendss_transformer.py  test_opendss_transformer_reader.py  test_opendss_writer.py  test_parsers.py  test_reader.py  test_session.py  test_store.py  test_writer.py
usage/: index.html
(+333 files in other folders)
